--- a/main.html
+++ b/main.html
@@ -14,9 +14,29 @@
             <circle cx="50%" cy="50%" r="25"></circle>
         </svg>
     </div>
-    <h1>
-        hello
-    </h1>
+    <div class="main">
+        <div class="header"></div>
+        <div class="top-visual">
+            <ul class="wave-txt">
+                <li class="wave reverse">
+                    <h1>
+                        <em>hello my name is myeonghee</em>
+                    </h1>
+                    <h1>
+                        <em>hello my name is myeonghee</em>
+                    </h1>
+                </li>
+                <li class="wave">
+                    <h1>
+                        <em>hello my name is myeonghee</em>
+                    </h1>
+                    <h1>
+                        <em>hello my name is myeonghee</em>
+                    </h1>
+                </li>
+            </ul>
+        </div>
+    </div>
     <script src="js/loading.js"></script>
 </body>
 </html>
