--- a/main.html
+++ b/main.html
@@ -20,18 +20,42 @@
             <ul class="wave-txt">
                 <li class="wave reverse">
                     <h1>
-                        <em>hello my name is myeonghee</em>
+                        <em>Hello my name is myeonghee</em>
                     </h1>
                     <h1>
-                        <em>hello my name is myeonghee</em>
+                        <em>Hello my name is myeonghee</em>
                     </h1>
                 </li>
                 <li class="wave">
                     <h1>
-                        <em>hello my name is myeonghee</em>
+                        <em>Hello my name is myeonghee</em>
                     </h1>
                     <h1>
-                        <em>hello my name is myeonghee</em>
+                        <em>Hello my name is myeonghee</em>
+                    </h1>
+                </li>
+                <li class="wave reverse">
+                    <h1>
+                        <em>Hello my name is myeonghee</em>
+                    </h1>
+                    <h1>
+                        <em>Hello my name is myeonghee</em>
+                    </h1>
+                </li>
+                <li class="wave">
+                    <h1>
+                        <em>Hello my name is myeonghee</em>
+                    </h1>
+                    <h1>
+                        <em>Hello my name is myeonghee</em>
+                    </h1>
+                </li>
+                <li class="wave reverse">
+                    <h1>
+                        <em>Hello my name is myeonghee</em>
+                    </h1>
+                    <h1>
+                        <em>Hello my name is myeonghee</em>
                     </h1>
                 </li>
             </ul>
