--- a/main.html
+++ b/main.html
@@ -15,50 +15,73 @@
         </svg>
     </div>
     <div class="main">
-        <div class="header"></div>
+        <div class="header">
+            <a href="main.html">
+                <span class="go-home">
+                    Myeonghee Jeon
+                </span>
+            </a>
+        </div>
         <div class="top-visual">
             <ul class="wave-txt">
                 <li class="wave reverse">
                     <h1>
-                        <em>Hello my name is myeonghee</em>
+                        <em>Hellomynameismyeonghee</em>
                     </h1>
                     <h1>
-                        <em>Hello my name is myeonghee</em>
-                    </h1>
-                </li>
-                <li class="wave">
-                    <h1>
-                        <em>Hello my name is myeonghee</em>
-                    </h1>
-                    <h1>
-                        <em>Hello my name is myeonghee</em>
-                    </h1>
-                </li>
-                <li class="wave reverse">
-                    <h1>
-                        <em>Hello my name is myeonghee</em>
-                    </h1>
-                    <h1>
-                        <em>Hello my name is myeonghee</em>
+                        <em>Hellomynameismyeonghee</em>
                     </h1>
                 </li>
                 <li class="wave">
                     <h1>
-                        <em>Hello my name is myeonghee</em>
+                        <em>meticulouscorrectexactperfectionist</em>
                     </h1>
                     <h1>
-                        <em>Hello my name is myeonghee</em>
+                        <em>meticulouscorrectexactperfectionist</em>
                     </h1>
                 </li>
                 <li class="wave reverse">
                     <h1>
-                        <em>Hello my name is myeonghee</em>
+                        <em>goodmankindfriendlyniceconsiderate</em>
                     </h1>
                     <h1>
-                        <em>Hello my name is myeonghee</em>
+                        <em>goodmankindfriendlyniceconsiderate</em>
+                    </h1>
+                </li>
+                <li class="wave">
+                    <h1>
+                        <em>isfjlibraoctober23earlymorning0940</em>
+                    </h1>
+                    <h1>
+                        <em>isfjlibraoctober23earlymorning0940</em>
+                    </h1>
+                </li>
+                <li class="wave reverse">
+                    <h1>
+                        <em>workoutrunningwalkinghikingbicycle</em>
+                    </h1>
+                    <h1>
+                        <em>workoutrunningwalkinghikingbicycle</em>
                     </h1>
                 </li>
             </ul>
+            <div class="kv-sticker">
+                <div class="sticker obj1">
+                    <h2>ISFJ</h2>
+                </div>
+                <div class="sticker obj2">
+                    <h2>MYEONGHEE</h2>
+                </div>
+                <div class="sticker obj3">
+                    <h2>LIBRA</h2>
+                </div>
+                <div class="sticker obj4">
+                    <h2>Oct 23</h2>
+                </div>
+                <div class="sticker obj5">
+                    <h2>Designer</h2>
+                </div>
+            </div>
         </div>
     </div>
     <script src="js/loading.js"></script>
