--- a/main.html
+++ b/main.html
@@ -83,6 +83,23 @@
                 </div>
             </div>
         </div>
+        <div class="thum-container">
+            <div class="thum-area">
+                <ul class="rows">
+                    <li class="thum-item">
+                        <a href="#" class="thum-con">
+                            <div class="thum-img">
+                                <img src="img/thum_1.png"/>
+                            </div>
+                            <div class="thum-text">
+                                <h4>Channel</h4>
+                                <span>샤넬 부킹사이트</span>
+                            </div>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
     </div>
     <script src="js/loading.js"></script>
 </body>
