--- a/main.html
+++ b/main.html
@@ -89,11 +89,122 @@
                     <li class="thum-item">
                         <a href="#" class="thum-con">
                             <div class="thum-img">
-                                <img src="img/thum_1.png"/>
+                                <img src="img/thum_0-1.png"/>
+                                <div class="thum-text into-img">
+                                    <h4>Athena2 (VMS 모니터링 관제 플랫폼)</h4>
+                                    <span>Danusys</span>
+                                </div>
                             </div>
                             <div class="thum-text">
-                                <h4>Channel</h4>
-                                <span>샤넬 부킹사이트</span>
+                                <h4>Athena2 (VMS 모니터링 관제 플랫폼)</h4>
+                                <span>Danusys</span>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="thum-item">
+                        <a href="#" class="thum-con">
+                            <div class="thum-img">
+                                <img src="img/thum_0.png"/>
+                                <div class="thum-text into-img">
+                                    <h4>디자인시스템</h4>
+                                    <span>Danusys</span>
+                                </div>
+                            </div>
+                            <div class="thum-text">
+                                <h4>디자인시스템</h4>
+                                <span>Danusys</span>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="thum-item">
+                        <a href="#" class="thum-con">
+                            <div class="thum-img">
+                                <img src="img/thum_1.png"/>
+                                <div class="thum-text into-img">
+                                    <h4>고객 관리 네이티브 앱</h4>
+                                    <span>Channel</span>
+                                </div>
+                            </div>
+                            <div class="thum-text">
+                                <h4>고객 관리 네이티브 앱</h4>
+                                <span>Channel</span>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="thum-item">
+                        <a href="#" class="thum-con">
+                            <div class="thum-img">
+                                <img src="img/thum_2.png"/>
+                                <div class="thum-text into-img">
+                                    <h4>글로벌 기업의 반응형 웹사이트</h4>
+                                    <span>Asiance</span>
+                                </div>
+                            </div>
+                            <div class="thum-text">
+                                <h4>글로벌 기업의 반응형 웹사이트</h4>
+                                <span>Asiance</span>
+                            </div>
+                        </a>
+                    </li>
+                </ul>
+                <ul class="rows">
+                    <li class="thum-item">
+                        <a href="#" class="thum-con">
+                            <div class="thum-img">
+                                <img src="img/thum_3.png"/>
+                                <div class="thum-text into-img">
+                                    <h4>까르띠에 부킹사이트</h4>
+                                    <span>Cartier</span>
+                                </div>
+                            </div>
+                            <div class="thum-text">
+                                <h4>까르띠에 부킹사이트</h4>
+                                <span>Cartier</span>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="thum-item">
+                        <a href="#" class="thum-con">
+                            <div class="thum-img">
+                                <img src="img/thum_4.png"/>
+                                <div class="thum-text into-img">
+                                    <h4>3M 고객 사이트 구축 및 운영</h4>
+                                    <span>3M</span>
+                                </div>
+                            </div>
+                            <div class="thum-text">
+                                <h4>3M 고객 사이트 구축 및 운영</h4>
+                                <span>3M</span>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="thum-item">
+                        <a href="#" class="thum-con">
+                            <div class="thum-img">
+                                <img src="img/thum_2.png"/>
+                                <div class="thum-text into-img">
+                                    <h4>샤넬 부킹사이트</h4>
+                                    <span>Chennel</span>
+                                </div>
+                            </div>
+                            <div class="thum-text">
+                                <h4>샤넬 부킹사이트</h4>
+                                <span>Cheneel</span>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="thum-item">
+                        <a href="#" class="thum-con">
+                            <div class="thum-img">
+                                <img src="img/thum_3.png"/>
+                                <div class="thum-text into-img">
+                                    <h4>샤넬 부킹사이트</h4>
+                                    <span>Chennel</span>
+                                </div>
+                            </div>
+                            <div class="thum-text">
+                                <h4>샤넬 부킹사이트</h4>
+                                <span>Chennel</span>
                             </div>
                         </a>
                     </li>
