--- a/main.html
+++ b/main.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" type="text/css" href="css/common.css">
-    <title>Myenghee's portfolio</title>
+    <title>Myenghee Jeon</title>
 </head>
 <body class="before_load">
     <div class="loading">
@@ -15,13 +15,6 @@
         </svg>
     </div>
     <div class="main">
-        <div class="header">
-            <a href="main.html">
-                <span class="go-home">
-                    Myeonghee Jeon
-                </span>
-            </a>
-        </div>
         <div class="top-visual">
             <ul class="wave-txt">
                 <li class="wave reverse">
@@ -117,16 +110,16 @@
                         </a>
                     </li>
                     <li class="thum-item">
-                        <a href="#" class="thum-con">
+                        <a href="channel-app.html" class="thum-con">
                             <div class="thum-img">
                                 <img src="img/thum_1.png"/>
                                 <div class="thum-text into-img">
-                                    <h4>고객 관리 네이티브 앱</h4>
+                                    <h4>고객 관리 멤버쉽 앱</h4>
                                     <span>Channel</span>
                                 </div>
                             </div>
                             <div class="thum-text">
-                                <h4>고객 관리 네이티브 앱</h4>
+                                <h4>고객 관리 멤버쉽 앱</h4>
                                 <span>Channel</span>
                             </div>
                         </a>
@@ -210,6 +203,9 @@
                     </li>
                 </ul>
             </div>
+        </div>
+        <div class="footer">
+            <p class="dark">©All Rights Reserved to Myeonghee Jeon. </p>
         </div>
     </div>
     <script src="js/loading.js"></script>
