--- a/channel-app.html
+++ b/channel-app.html
@@ -23,7 +23,12 @@
     </div>
     <main class="con">
         <div class="top-visual">
-            <img src="img/hero_pc_1.png"/>
+            <div class="hero-pc">
+                <img src="img/hero_pc_1.png"/>
+            </div>
+            <div class="hero-mo">
+                <img src="img/hero_mo_1.png"/>
+            </div>
         </div>
         <div class="sec-detail headline">
             <h3 class="title">샤넬 고객 전용 멤버쉽 앱</h3>
@@ -65,8 +70,30 @@
             <h4>Overview</h4>
             <p>샤넬 고객들을 위한 멤버쉽 앱입니다. 멤버쉽 단계를 GOLD ~ WELCOME 단계까지 나누어 고객들에게 단계 별 혜택을 제공할 수 있도록 하였으며 사용자에게 자연스럽게 '샤넬의 최신 소식'을 전달할 수 있도록 하였고 보다 손쉽게 샤넬 제품 구매와 예약 현황을 확인할 수 있도록 제작하였습니다.</p>
         </div>
-        <div class="top11">
-            <img src="img/hero_pc_1.png"/>
+        <div class="sub-img black">
+            <img src="img/channel_mockup_1.png"/>
+        </div>
+        <div class="detail-img">
+            <img src="img/channel_1.png"/>
+        </div>
+        <div class="detail-img">
+            <img src="img/channel_2.png"/>
+        </div>
+        <div class="more-projects">
+            <a href="#" class="other-project prev">
+                <div class="text-direction">
+                    <svg class="pre-svg" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none"><mask id="a" width="24" height="24" x="0" y="0" maskUnits="userSpaceOnUse" style="mask-type:alpha"><path fill="#D9D9D9" d="M0 0h24v24H0z"/></mask><g mask="url(#a)"><path fill="#333" d="m9 19-7-7 7-7 1.425 1.4-4.6 4.6H22v2H5.825l4.575 4.6L9 19Z"/></g></svg>
+                    <h5 class="pre-text">Previos</h5>
+                </div>
+                <h4 class="pre-project-name">디자인시스템</h4>
+            </a>
+            <a href="#" class="other-project next">
+                <div class="text-direction">
+                    <h5 class="next-text">Next up</h5>
+                    <svg class="next-svg" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none"><mask id="a" width="24" height="24" x="0" y="0" maskUnits="userSpaceOnUse" style="mask-type:alpha"><path fill="#D9D9D9" d="M0 0h24v24H0z"/></mask><g mask="url(#a)"><path fill="#333" d="m15 19-1.4-1.4 4.6-4.6H2v-2h16.2l-4.6-4.6L15 5l7 7-7 7Z"/></g></svg>
+                </div>
+                <h4 class="next-project-name">까르띠에 부킹사이트</h4>
+            </a>
         </div>
     </div>
     <div class="footer">
