--- a/asiance-web.html
+++ b/asiance-web.html
@@ -23,35 +23,41 @@
     </div>
     <main class="con">
         <div class="top-visual">
+            <div class="link-area">
+                <a href="https://www.asiance.com/en/" target="_blank" class="out-link">
+                    <span>Go to this site</span>
+                    <svg class="next-svg" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none"><mask id="a" width="24" height="24" x="0" y="0" maskUnits="userSpaceOnUse" style="mask-type:alpha"><path fill="#D9D9D9" d="M0 0h24v24H0z"/></mask><g mask="url(#a)"><path fill="#333" d="m15 19-1.4-1.4 4.6-4.6H2v-2h16.2l-4.6-4.6L15 5l7 7-7 7Z"/></g></svg>
+                </a>
+            </div>
             <div class="hero-pc">
-                <img src="img/hero_pc_1.png"/>
+                <img src="img/hero_pc_2.png"/>
             </div>
             <div class="hero-mo">
-                <img src="img/hero_mo_1.png"/>
+                <img src="img/hero_mo_2.png"/>
             </div>
         </div>
         <div class="sec-detail headline">
-            <h3 class="title">샤넬 고객 전용 멤버쉽 앱</h3>
+            <h3 class="title">글로벌 기업 반응형 웹사이트</h3>
             <div class="summary">
                 <dl>
                     <dt>Year</dt>
-                    <dd>2017.01 - 2017.08</dd>
+                    <dd>2019.10 - 2019.12 / 2021.09 - 2021.12</dd>
                 </dl>
                 <dl>
                     <dt>Client</dt>
-                    <dd>Channel</dd>
+                    <dd>Asiance Korea</dd>
                 </dl>
                 <dl>
                     <dt>Role</dt>
-                    <dd>Designer</dd>
+                    <dd>PM / Lead Designer</dd>
                 </dl>
                 <dl>
                     <dt>Team</dt>
-                    <dd>2 PM / 3 Designer / 2 Developer</dd>
+                    <dd>1 Designer / 1 Developer</dd>
                 </dl>
                 <dl>
                     <dt>Scope</dt>
-                    <dd>iOS, Android App</dd>
+                    <dd>반응형 웹디자인, 광고 홍보 디자인</dd>
                 </dl>
                 <dl>
                     <dt>Tools</dt>
@@ -62,37 +68,46 @@
                         <span>
                             <img src="img/ico_figma.png"/>
                         </span>
+                        <span>
+                            <img src="img/ico_ill.png"/>
+                        </span>
                     </dd>
                 </dl>
             </div>
         </div>
         <div class="sec-detail headline">
             <h4>Overview</h4>
-            <p>샤넬 고객들을 위한 멤버쉽 앱입니다. 멤버쉽 단계를 GOLD ~ WELCOME 단계까지 나누어 고객들에게 단계 별 혜택을 제공할 수 있도록 하였으며 사용자에게 자연스럽게 '샤넬의 최신 소식'을 전달할 수 있도록 하였고 보다 손쉽게 샤넬 제품 구매와 예약 현황을 확인할 수 있도록 제작하였습니다.</p>
-        </div>
-        <div class="sub-img black">
-            <img src="img/channel_mockup_1.png"/>
+            <p>유행과 트렌드에 민감한 에이젼시 업계의 특성에 맞춰 기업의 반응형 웹사이트를 전면 리뉴얼하게 되었습니다. 수집한 데이터에 따라 기존 웹사이트의 문제점을 찾았고 문제점을 해결하기 위한 솔루션을 도출하였습니다. 높은 사이트 이탈률을 줄이고 서비스를 간결하고 직접적으로 전달하고자 하였으며 디자인시스템 규칙을 설계하여 디자인 통일성을 갖추고 브랜드 아이덴티티를 확립하고자 하였습니다.</p>
         </div>
         <div class="detail-img">
-            <img src="img/channel_1.png"/>
+            <img src="img/asiance_1.png"/>
         </div>
         <div class="detail-img">
-            <img src="img/channel_2.png"/>
+            <img src="img/asiance_2.png"/>
+        </div>
+        <div class="detail-img">
+            <img src="img/asiance_3.png"/>
+        </div>
+        <div class="detail-img">
+            <img src="img/asiance_4.png"/>
+        </div>
+        <div class="detail-img">
+            <img src="img/asiance_5.png"/>
         </div>
         <div class="more-projects">
-            <a href="asiance-web.html" class="other-project prev">
+            <a href="#" class="other-project prev">
                 <div class="text-direction">
                     <svg class="pre-svg" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none"><mask id="a" width="24" height="24" x="0" y="0" maskUnits="userSpaceOnUse" style="mask-type:alpha"><path fill="#D9D9D9" d="M0 0h24v24H0z"/></mask><g mask="url(#a)"><path fill="#333" d="m9 19-7-7 7-7 1.425 1.4-4.6 4.6H22v2H5.825l4.575 4.6L9 19Z"/></g></svg>
                     <h5 class="pre-text">Previos</h5>
                 </div>
-                <h4 class="pre-project-name">아지앙스 웹사이트</h4>
+                <h4 class="pre-project-name">울마크 앱</h4>
             </a>
-            <a href="#" class="other-project next">
+            <a href="channel-app.html" class="other-project next">
                 <div class="text-direction">
                     <h5 class="next-text">Next up</h5>
                     <svg class="next-svg" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none"><mask id="a" width="24" height="24" x="0" y="0" maskUnits="userSpaceOnUse" style="mask-type:alpha"><path fill="#D9D9D9" d="M0 0h24v24H0z"/></mask><g mask="url(#a)"><path fill="#333" d="m15 19-1.4-1.4 4.6-4.6H2v-2h16.2l-4.6-4.6L15 5l7 7-7 7Z"/></g></svg>
                 </div>
-                <h4 class="next-project-name">까르띠에 부킹사이트</h4>
+                <h4 class="next-project-name">샤넬 멤버쉽 앱</h4>
             </a>
         </div>
     </div>
