--- a/main.html
+++ b/main.html
@@ -125,7 +125,7 @@
                         </a>
                     </li>
                     <li class="thum-item">
-                        <a href="#" class="thum-con">
+                        <a href="asiance-web.html" class="thum-con">
                             <div class="thum-img">
                                 <img src="img/thum_2.png"/>
                                 <div class="thum-text into-img">
@@ -146,13 +146,13 @@
                             <div class="thum-img">
                                 <img src="img/thum_3.png"/>
                                 <div class="thum-text into-img">
-                                    <h4>까르띠에 부킹사이트</h4>
-                                    <span>Cartier</span>
+                                    <h4>울마크 앱</h4>
+                                    <span>Woolmark</span>
                                 </div>
                             </div>
                             <div class="thum-text">
-                                <h4>까르띠에 부킹사이트</h4>
-                                <span>Cartier</span>
+                                <h4>울마크 앱</h4>
+                                <span>Woolmark</span>
                             </div>
                         </a>
                     </li>
