--- a/woolmark.html
+++ b/woolmark.html
@@ -24,34 +24,34 @@
     <main class="con">
         <div class="top-visual">
             <div class="hero-pc">
-                <img src="img/hero_pc_1.png"/>
+                <img src="img/hero_pc_2.png"/>
             </div>
             <div class="hero-mo">
-                <img src="img/hero_mo_1.png"/>
+                <img src="img/hero_mo_2.png"/>
             </div>
         </div>
         <div class="sec-detail headline">
-            <h3 class="title">샤넬 고객 전용 멤버쉽 앱</h3>
+            <h3 class="title">울마크 침구 커스터마이징 앱</h3>
             <div class="summary">
                 <dl>
                     <dt>Year</dt>
-                    <dd>2017.01 - 2017.08</dd>
+                    <dd>2017.07 - 2017.09</dd>
                 </dl>
                 <dl>
                     <dt>Client</dt>
-                    <dd>Channel</dd>
+                    <dd>Woolmark</dd>
                 </dl>
                 <dl>
                     <dt>Role</dt>
-                    <dd>Designer</dd>
+                    <dd>Lead Designer</dd>
                 </dl>
                 <dl>
                     <dt>Team</dt>
-                    <dd>2 PM / 3 Designer / 2 Developer</dd>
+                    <dd>1 PM / 1 Designer / 1 Developer</dd>
                 </dl>
                 <dl>
                     <dt>Scope</dt>
-                    <dd>iOS, Android App</dd>
+                    <dd>iOS 앱</dd>
                 </dl>
                 <dl>
                     <dt>Tools</dt>
@@ -62,37 +62,46 @@
                         <span>
                             <img src="img/ico_figma.png"/>
                         </span>
+                        <span>
+                            <img src="img/ico_ill.png"/>
+                        </span>
                     </dd>
                 </dl>
             </div>
         </div>
         <div class="sec-detail headline">
             <h4>Overview</h4>
-            <p>샤넬 고객들을 위한 멤버쉽 앱입니다. 멤버쉽 단계를 GOLD ~ WELCOME 단계까지 나누어 고객들에게 단계 별 혜택을 제공할 수 있도록 하였으며 사용자에게 자연스럽게 '샤넬의 최신 소식'을 전달할 수 있도록 하였고 보다 손쉽게 샤넬 제품 구매와 예약 현황을 확인할 수 있도록 제작하였습니다.</p>
-        </div>
-        <div class="sub-img black">
-            <img src="img/channel_mockup_1.png"/>
+            <p>양모 품질 제품 인증 마크인 울마크에서 보유한 메리퀸 브랜드의 침구류 커스터마이징 앱입니다. 울마크 인증을 받은 다양한 패턴의 침구류를 침실에 미리 적용해 보고 마음에 드는 패턴을 구매할 수 있는 사용자 경험을 제공하는 것이 목표였습니다. 쉽고 빠르게 침실을 커스터마이징 할 수 있도록 유저 인터페이스를 설계하였으며 가까운 메리퀸 매장을 자연스럽게 안내할 수 있도록 제작하였습니다.</p>
         </div>
         <div class="detail-img">
-            <img src="img/channel_1.png"/>
+            <img src="img/asiance_1.png"/>
         </div>
         <div class="detail-img">
-            <img src="img/channel_2.png"/>
+            <img src="img/asiance_2.png"/>
+        </div>
+        <div class="detail-img">
+            <img src="img/asiance_3.png"/>
+        </div>
+        <div class="detail-img">
+            <img src="img/asiance_4.png"/>
+        </div>
+        <div class="detail-img">
+            <img src="img/asiance_5.png"/>
         </div>
         <div class="more-projects">
-            <a href="asiance-web.html" class="other-project prev">
+            <a href="#" class="other-project prev">
                 <div class="text-direction">
                     <svg class="pre-svg" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none"><mask id="a" width="24" height="24" x="0" y="0" maskUnits="userSpaceOnUse" style="mask-type:alpha"><path fill="#D9D9D9" d="M0 0h24v24H0z"/></mask><g mask="url(#a)"><path fill="#333" d="m9 19-7-7 7-7 1.425 1.4-4.6 4.6H22v2H5.825l4.575 4.6L9 19Z"/></g></svg>
                     <h5 class="pre-text">Previos</h5>
                 </div>
-                <h4 class="pre-project-name">아지앙스 웹사이트</h4>
+                <h4 class="pre-project-name">울마크 앱</h4>
             </a>
-            <a href="#" class="other-project next">
+            <a href="channel-app.html" class="other-project next">
                 <div class="text-direction">
                     <h5 class="next-text">Next up</h5>
                     <svg class="next-svg" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none"><mask id="a" width="24" height="24" x="0" y="0" maskUnits="userSpaceOnUse" style="mask-type:alpha"><path fill="#D9D9D9" d="M0 0h24v24H0z"/></mask><g mask="url(#a)"><path fill="#333" d="m15 19-1.4-1.4 4.6-4.6H2v-2h16.2l-4.6-4.6L15 5l7 7-7 7Z"/></g></svg>
                 </div>
-                <h4 class="next-project-name">까르띠에 부킹사이트</h4>
+                <h4 class="next-project-name">샤넬 멤버쉽 앱</h4>
             </a>
         </div>
     </div>
