--- a/gsk.html
+++ b/gsk.html
@@ -23,44 +23,47 @@
     </div>
     <main class="con">
         <div class="top-visual">
+            <div class="link-area">
+                <a href="https://www.gskshop.co.kr/index.html" target="_blank" class="out-link">
+                    <span>Go to this site</span>
+                    <svg class="next-svg" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none"><mask id="a" width="24" height="24" x="0" y="0" maskUnits="userSpaceOnUse" style="mask-type:alpha"><path fill="#D9D9D9" d="M0 0h24v24H0z"/></mask><g mask="url(#a)"><path fill="#333" d="m15 19-1.4-1.4 4.6-4.6H2v-2h16.2l-4.6-4.6L15 5l7 7-7 7Z"/></g></svg>
+                </a>
+            </div>
             <div class="hero-pc">
-                <img src="img/hero_pc_3.png"/>
+                <img src="img/hero_pc_5.png"/>
             </div>
             <div class="hero-mo">
-                <img src="img/hero_mo_3.png"/>
+                <img src="img/hero_mo_5.png"/>
             </div>
         </div>
         <div class="sec-detail headline">
-            <h3 class="title">울마크 침구 커스터마이징 앱</h3>
+            <h3 class="title">GSK 이커머스 사이트</h3>
             <div class="summary">
                 <dl>
                     <dt>Year</dt>
-                    <dd>2017.07 - 2017.09</dd>
+                    <dd>2016.09 - 2020.12</dd>
                 </dl>
                 <dl>
                     <dt>Client</dt>
-                    <dd>Woolmark</dd>
+                    <dd>GSK</dd>
                 </dl>
                 <dl>
                     <dt>Role</dt>
-                    <dd>Lead Designer</dd>
+                    <dd>Designer</dd>
                 </dl>
                 <dl>
                     <dt>Team</dt>
-                    <dd>1 PM / 1 Designer / 1 Developer</dd>
+                    <dd>3 PM / 4 Designer / 4 Developer</dd>
                 </dl>
                 <dl>
                     <dt>Scope</dt>
-                    <dd>iOS 앱</dd>
+                    <dd>웹/모바일 사이트 구축 및 유지보수 운영</dd>
                 </dl>
                 <dl>
                     <dt>Tools</dt>
                     <dd>
                         <span>
                             <img src="img/ico_pts.png"/>
-                        </span>
-                        <span>
-                            <img src="img/ico_figma.png"/>
                         </span>
                         <span>
                             <img src="img/ico_ill.png"/>
@@ -71,40 +74,31 @@
         </div>
         <div class="sec-detail headline">
             <h4>Overview</h4>
-            <p>양모 품질 제품 인증 마크인 울마크에서 보유한 메리퀸 브랜드의 침구류 커스터마이징 앱입니다. 울마크 인증을 받은 다양한 패턴의 침구류를 침실에 미리 적용해 보고 마음에 드는 패턴을 구매할 수 있는 사용자 경험을 제공하는 것이 목표였습니다. 쉽고 빠르게 침실을 커스터마이징 할 수 있도록 유저 인터페이스를 설계하였으며 가까운 메리퀸 매장을 자연스럽게 안내할 수 있도록 제작하였습니다.</p>
+            <p>글로벌 헬스케어 브랜드인 GSK의 한국 컨슈머케어 이커머스 사이트를 구축&유지보수 하였습니다. 모바일과 웹 디바이스를 지원하는 적응형 이커머스 사이트를 구축하였으며 챕스틱, 센트룸, 이머전씨, 애드빌의 브랜드 사이트를 제작하였습니다. 또한 각 브랜드의 SNS를 운영하여 브랜드 광고&홍보에 필요한 디자인 또한 지원하였습니다.</p>
         </div>
         <div class="detail-img">
-            <img src="img/woolmark_1.png"/>
+            <img src="img/gsk_1.png"/>
         </div>
         <div class="detail-img">
-            <img src="img/woolmark_2.png"/>
+            <img src="img/gsk_2.png"/>
         </div>
         <div class="detail-img">
-            <img src="img/woolmark_3.png"/>
-        </div>
-        <div class="detail-img">
-            <img src="img/woolmark_4.png"/>
-        </div>
-        <div class="detail-img">
-            <img src="img/woolmark_5.png"/>
-        </div>
-        <div class="detail-img">
-            <img src="img/woolmark_6.png"/>
+            <img src="img/gsk_3.png"/>
         </div>
         <div class="more-projects">
-            <a href="3m.html" class="other-project prev">
+            <a href="#" class="other-project prev">
                 <div class="text-direction">
                     <svg class="pre-svg" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none"><mask id="a" width="24" height="24" x="0" y="0" maskUnits="userSpaceOnUse" style="mask-type:alpha"><path fill="#D9D9D9" d="M0 0h24v24H0z"/></mask><g mask="url(#a)"><path fill="#333" d="m9 19-7-7 7-7 1.425 1.4-4.6 4.6H22v2H5.825l4.575 4.6L9 19Z"/></g></svg>
                     <h5 class="pre-text">Previos</h5>
                 </div>
-                <h4 class="pre-project-name">3M 컨슈머케어 사이트</h4>
+                <h4 class="pre-project-name">울마크 앱</h4>
             </a>
-            <a href="channel-app.html" class="other-project next">
+            <a href="3m.html" class="other-project next">
                 <div class="text-direction">
                     <h5 class="next-text">Next up</h5>
                     <svg class="next-svg" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none"><mask id="a" width="24" height="24" x="0" y="0" maskUnits="userSpaceOnUse" style="mask-type:alpha"><path fill="#D9D9D9" d="M0 0h24v24H0z"/></mask><g mask="url(#a)"><path fill="#333" d="m15 19-1.4-1.4 4.6-4.6H2v-2h16.2l-4.6-4.6L15 5l7 7-7 7Z"/></g></svg>
                 </div>
-                <h4 class="next-project-name">샤넬 멤버쉽 앱</h4>
+                <h4 class="next-project-name">3M 컨슈머케어 사이트</h4>
             </a>
         </div>
     </div>
