--- a/main.html
+++ b/main.html
@@ -142,7 +142,7 @@
                 </ul>
                 <ul class="rows">
                     <li class="thum-item">
-                        <a href="#" class="thum-con">
+                        <a href="woolmark.html" class="thum-con">
                             <div class="thum-img">
                                 <img src="img/thum_3.png"/>
                                 <div class="thum-text into-img">
@@ -157,32 +157,32 @@
                         </a>
                     </li>
                     <li class="thum-item">
-                        <a href="#" class="thum-con">
+                        <a href="3m.html" class="thum-con">
                             <div class="thum-img">
                                 <img src="img/thum_4.png"/>
                                 <div class="thum-text into-img">
-                                    <h4>3M 고객 사이트 구축 및 운영</h4>
+                                    <h4>3M 컨슈머케어 사이트</h4>
                                     <span>3M</span>
                                 </div>
                             </div>
                             <div class="thum-text">
-                                <h4>3M 고객 사이트 구축 및 운영</h4>
+                                <h4>3M 컨슈머케어 사이트</h4>
                                 <span>3M</span>
                             </div>
                         </a>
                     </li>
                     <li class="thum-item">
-                        <a href="#" class="thum-con">
+                        <a href="gsk.html" class="thum-con">
                             <div class="thum-img">
-                                <img src="img/thum_2.png"/>
+                                <img src="img/thum_5.png"/>
                                 <div class="thum-text into-img">
-                                    <h4>샤넬 부킹사이트</h4>
-                                    <span>Chennel</span>
+                                    <h4>GSK 이커머스 사이트</h4>
+                                    <span>GSK</span>
                                 </div>
                             </div>
                             <div class="thum-text">
-                                <h4>샤넬 부킹사이트</h4>
-                                <span>Cheneel</span>
+                                <h4>GSK 이커머스 사이트</h4>
+                                <span>GSK</span>
                             </div>
                         </a>
                     </li>
