--- a/british.html
+++ b/british.html
@@ -30,40 +30,43 @@
                 </a>
             </div>
             <div class="hero-pc">
-                <img src="img/hero_pc_5.png"/>
+                <img src="img/hero_pc_6.png"/>
             </div>
             <div class="hero-mo">
-                <img src="img/hero_mo_5.png"/>
+                <img src="img/hero_mo_6.png"/>
             </div>
         </div>
         <div class="sec-detail headline">
-            <h3 class="title">GSK 이커머스 사이트</h3>
+            <h3 class="title">영국문화원 어학원 예약 사이트</h3>
             <div class="summary">
                 <dl>
                     <dt>Year</dt>
-                    <dd>2016.09 - 2020.12</dd>
+                    <dd>2018.01 - 2019.01</dd>
                 </dl>
                 <dl>
                     <dt>Client</dt>
-                    <dd>GSK</dd>
+                    <dd>British Council</dd>
                 </dl>
                 <dl>
                     <dt>Role</dt>
-                    <dd>Designer</dd>
+                    <dd>Lead Designer</dd>
                 </dl>
                 <dl>
                     <dt>Team</dt>
-                    <dd>3 PM / 4 Designer / 4 Developer</dd>
+                    <dd>3 PM / 3 Designer / 2 Developer</dd>
                 </dl>
                 <dl>
                     <dt>Scope</dt>
-                    <dd>웹/모바일 사이트 구축 및 유지보수 운영</dd>
+                    <dd>웹/모바일 디자인, 광고 배너 디자인, 옥외 광고 디자인</dd>
                 </dl>
                 <dl>
                     <dt>Tools</dt>
                     <dd>
                         <span>
                             <img src="img/ico_pts.png"/>
+                        </span>
+                        <span>
+                            <img src="img/ico_figma.png"/>
                         </span>
                         <span>
                             <img src="img/ico_ill.png"/>
@@ -74,31 +77,40 @@
         </div>
         <div class="sec-detail headline">
             <h4>Overview</h4>
-            <p>글로벌 헬스케어 브랜드인 GSK의 한국 컨슈머케어 이커머스 사이트를 구축&유지보수 하였습니다. 모바일과 웹 디바이스를 지원하는 적응형 이커머스 사이트를 구축하였으며 챕스틱, 센트룸, 이머전씨, 애드빌의 브랜드 사이트를 제작하였습니다. 또한 각 브랜드의 SNS를 운영하여 브랜드 광고&홍보에 필요한 디자인 또한 지원하였습니다.</p>
+            <p>영국문화원의 어학원 예약 사이트를 제작하였습니다. 프로모션 사이트를 시즈널하게 먼슬리로 디자인하였으며 지하철과 버스 정류장 등에 홍보를 위한 옥외광고 디자인에 참여하였습니다.</p>
         </div>
         <div class="detail-img">
-            <img src="img/gsk_1.png"/>
+            <img src="img/bri_1.png"/>
         </div>
         <div class="detail-img">
-            <img src="img/gsk_2.png"/>
+            <img src="img/bri_2.png"/>
         </div>
         <div class="detail-img">
-            <img src="img/gsk_3.png"/>
+            <img src="img/bri_3.png"/>
+        </div>
+        <div class="detail-img">
+            <img src="img/bri_4.png"/>
+        </div>
+        <div class="detail-img">
+            <img src="img/bri_5.png"/>
+        </div>
+        <div class="detail-img">
+            <img src="img/bri_6.png"/>
         </div>
         <div class="more-projects">
-            <a href="british.html" class="other-project prev">
+            <a href="#" class="other-project prev">
                 <div class="text-direction">
                     <svg class="pre-svg" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none"><mask id="a" width="24" height="24" x="0" y="0" maskUnits="userSpaceOnUse" style="mask-type:alpha"><path fill="#D9D9D9" d="M0 0h24v24H0z"/></mask><g mask="url(#a)"><path fill="#333" d="m9 19-7-7 7-7 1.425 1.4-4.6 4.6H22v2H5.825l4.575 4.6L9 19Z"/></g></svg>
                     <h5 class="pre-text">Previos</h5>
                 </div>
-                <h4 class="pre-project-name">영국문화원 예약 사이트</h4>
+                <h4 class="pre-project-name">울마크 앱</h4>
             </a>
-            <a href="3m.html" class="other-project next">
+            <a href="gsk.html" class="other-project next">
                 <div class="text-direction">
                     <h5 class="next-text">Next up</h5>
                     <svg class="next-svg" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none"><mask id="a" width="24" height="24" x="0" y="0" maskUnits="userSpaceOnUse" style="mask-type:alpha"><path fill="#D9D9D9" d="M0 0h24v24H0z"/></mask><g mask="url(#a)"><path fill="#333" d="m15 19-1.4-1.4 4.6-4.6H2v-2h16.2l-4.6-4.6L15 5l7 7-7 7Z"/></g></svg>
                 </div>
-                <h4 class="next-project-name">3M 컨슈머케어 사이트</h4>
+                <h4 class="next-project-name">GSK 컨슈머케어 사이트</h4>
             </a>
         </div>
     </div>
