--- a/main.html
+++ b/main.html
@@ -187,17 +187,17 @@
                         </a>
                     </li>
                     <li class="thum-item">
-                        <a href="#" class="thum-con">
+                        <a href="british.html" class="thum-con">
                             <div class="thum-img">
-                                <img src="img/thum_3.png"/>
+                                <img src="img/thum_6.png"/>
                                 <div class="thum-text into-img">
-                                    <h4>샤넬 부킹사이트</h4>
-                                    <span>Chennel</span>
+                                    <h4>어학원 예약 사이트</h4>
+                                    <span>British Council</span>
                                 </div>
                             </div>
                             <div class="thum-text">
-                                <h4>샤넬 부킹사이트</h4>
-                                <span>Chennel</span>
+                                <h4>어학원 예약 사이트</h4>
+                                <span>British Council</span>
                             </div>
                         </a>
                     </li>
