--- a/asiance-web.html
+++ b/asiance-web.html
@@ -75,7 +75,7 @@
                 </dl>
             </div>
         </div>
-        <div class="sec-detail headline">
+        <div class="sec-detail">
             <h4>Overview</h4>
             <p>유행과 트렌드에 민감한 에이젼시 업계의 특성에 맞춰 기업의 반응형 웹사이트를 전면 리뉴얼하게 되었습니다. 수집한 데이터에 따라 기존 웹사이트의 문제점을 찾았고 문제점을 해결하기 위한 솔루션을 도출하였습니다. 높은 사이트 이탈률을 줄이고 서비스를 간결하고 직접적으로 전달하고자 하였으며 디자인시스템 규칙을 설계하여 디자인 통일성을 갖추고 브랜드 아이덴티티를 확립하고자 하였습니다.</p>
         </div>
