--- a/british.html
+++ b/british.html
@@ -23,12 +23,6 @@
     </div>
     <main class="con">
         <div class="top-visual">
-            <div class="link-area">
-                <a href="https://www.gskshop.co.kr/index.html" target="_blank" class="out-link">
-                    <span>Go to this site</span>
-                    <svg class="next-svg" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none"><mask id="a" width="24" height="24" x="0" y="0" maskUnits="userSpaceOnUse" style="mask-type:alpha"><path fill="#D9D9D9" d="M0 0h24v24H0z"/></mask><g mask="url(#a)"><path fill="#333" d="m15 19-1.4-1.4 4.6-4.6H2v-2h16.2l-4.6-4.6L15 5l7 7-7 7Z"/></g></svg>
-                </a>
-            </div>
             <div class="hero-pc">
                 <img src="img/hero_pc_6.png"/>
             </div>
@@ -75,7 +69,7 @@
                 </dl>
             </div>
         </div>
-        <div class="sec-detail headline">
+        <div class="sec-detail">
             <h4>Overview</h4>
             <p>영국문화원의 어학원 예약 사이트를 제작하였습니다. 프로모션 사이트를 시즈널하게 먼슬리로 디자인하였으며 지하철과 버스 정류장 등에 홍보를 위한 옥외광고 디자인에 참여하였습니다.</p>
         </div>
@@ -98,12 +92,12 @@
             <img src="img/bri_6.png"/>
         </div>
         <div class="more-projects">
-            <a href="#" class="other-project prev">
+            <a href="lacoste.html" class="other-project prev">
                 <div class="text-direction">
                     <svg class="pre-svg" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none"><mask id="a" width="24" height="24" x="0" y="0" maskUnits="userSpaceOnUse" style="mask-type:alpha"><path fill="#D9D9D9" d="M0 0h24v24H0z"/></mask><g mask="url(#a)"><path fill="#333" d="m9 19-7-7 7-7 1.425 1.4-4.6 4.6H22v2H5.825l4.575 4.6L9 19Z"/></g></svg>
                     <h5 class="pre-text">Previos</h5>
                 </div>
-                <h4 class="pre-project-name">울마크 앱</h4>
+                <h4 class="pre-project-name">라코스테 사이트 운영</h4>
             </a>
             <a href="gsk.html" class="other-project next">
                 <div class="text-direction">
