--- a/gsk.html
+++ b/gsk.html
@@ -72,7 +72,7 @@
                 </dl>
             </div>
         </div>
-        <div class="sec-detail headline">
+        <div class="sec-detail">
             <h4>Overview</h4>
             <p>글로벌 헬스케어 브랜드인 GSK의 한국 컨슈머케어 이커머스 사이트를 구축&유지보수 하였습니다. 모바일과 웹 디바이스를 지원하는 적응형 이커머스 사이트를 구축하였으며 챕스틱, 센트룸, 이머전씨, 애드빌의 브랜드 사이트를 제작하였습니다. 또한 각 브랜드의 SNS를 운영하여 브랜드 광고&홍보에 필요한 디자인 또한 지원하였습니다.</p>
         </div>
@@ -84,6 +84,21 @@
         </div>
         <div class="detail-img">
             <img src="img/gsk_3.png"/>
+        </div>
+        <div class="detail-img">
+            <img src="img/gsk_4.png"/>
+        </div>
+        <div class="detail-img">
+            <img src="img/gsk_5.png"/>
+        </div>
+        <div class="detail-img">
+            <img src="img/gsk_6.png"/>
+        </div>
+        <div class="detail-img">
+            <img src="img/gsk_7.png"/>
+        </div>
+        <div class="detail-img">
+            <img src="img/gsk_8.png"/>
         </div>
         <div class="more-projects">
             <a href="british.html" class="other-project prev">
