--- a/3m.html
+++ b/3m.html
@@ -72,7 +72,7 @@
                 </dl>
             </div>
         </div>
-        <div class="sec-detail headline">
+        <div class="sec-detail">
             <h4>Overview</h4>
             <p>글로벌 헬스케어 브랜드인 3M의 한국 컨슈머케어 사이트를 구축&유지보수 하였습니다. 모바일과 웹 디바이스를 지원하는 적응형 사이트로 구축하였으며 사이트 구축 후 프로모션, 배너, SNS 광고 등의 유지보수 운영에 필요한 디자인을 지원하였습니다.</p>
         </div>
