--- a/channel-app.html
+++ b/channel-app.html
@@ -66,7 +66,7 @@
                 </dl>
             </div>
         </div>
-        <div class="sec-detail headline">
+        <div class="sec-detail">
             <h4>Overview</h4>
             <p>샤넬 고객들을 위한 멤버쉽 앱입니다. 멤버쉽 단계를 GOLD ~ WELCOME 단계까지 나누어 고객들에게 단계 별 혜택을 제공할 수 있도록 하였으며 사용자에게 자연스럽게 '샤넬의 최신 소식'을 전달할 수 있도록 하였고 보다 손쉽게 샤넬 제품 구매와 예약 현황을 확인할 수 있도록 제작하였습니다.</p>
         </div>
