--- a/main.html
+++ b/main.html
@@ -202,6 +202,68 @@
                         </a>
                     </li>
                 </ul>
+                <ul class="rows">
+                    <li class="thum-item">
+                        <a href="lacoste.html" class="thum-con">
+                            <div class="thum-img">
+                                <img src="img/thum_7.png"/>
+                                <div class="thum-text into-img">
+                                    <h4>라코스테 사이트 운영</h4>
+                                    <span>Lacoste</span>
+                                </div>
+                            </div>
+                            <div class="thum-text">
+                                <h4>라코스테 사이트 운영</h4>
+                                <span>Lacoste</span>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="thum-item">
+                        <a href="lg.html" class="thum-con">
+                            <div class="thum-img">
+                                <img src="img/thum_8.png"/>
+                                <div class="thum-text into-img">
+                                    <h4>트랙터 관제 시스템</h4>
+                                    <span>유플러스 5G</span>
+                                </div>
+                            </div>
+                            <div class="thum-text">
+                                <h4>트렉터 관제 시스템</h4>
+                                <span>유플러스 5G</span>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="thum-item">
+                        <a href="cartier.html" class="thum-con">
+                            <div class="thum-img">
+                                <img src="img/thum_9.png"/>
+                                <div class="thum-text into-img">
+                                    <h4>방문 예약 사이트</h4>
+                                    <span>Cartier</span>
+                                </div>
+                            </div>
+                            <div class="thum-text">
+                                <h4>방문 예약 사이트</h4>
+                                <span>Cartier</span>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="thum-item">
+                        <a href="tech.html" class="thum-con">
+                            <div class="thum-img">
+                                <img src="img/thum_10.png"/>
+                                <div class="thum-text into-img">
+                                    <h4>컨퍼런스 브랜딩</h4>
+                                    <span>한불상공회의소</span>
+                                </div>
+                            </div>
+                            <div class="thum-text">
+                                <h4>컨퍼런스 브랜딩</h4>
+                                <span>한불상공회의소</span>
+                            </div>
+                        </a>
+                    </li>
+                </ul>
             </div>
         </div>
         <div class="footer">
