--- a/woolmark.html
+++ b/woolmark.html
@@ -69,7 +69,7 @@
                 </dl>
             </div>
         </div>
-        <div class="sec-detail headline">
+        <div class="sec-detail">
             <h4>Overview</h4>
             <p>양모 품질 제품 인증 마크인 울마크에서 보유한 메리퀸 브랜드의 침구류 커스터마이징 앱입니다. 울마크 인증을 받은 다양한 패턴의 침구류를 침실에 미리 적용해 보고 마음에 드는 패턴을 구매할 수 있는 사용자 경험을 제공하는 것이 목표였습니다. 쉽고 빠르게 침실을 커스터마이징 할 수 있도록 유저 인터페이스를 설계하였으며 가까운 메리퀸 매장을 자연스럽게 안내할 수 있도록 제작하였습니다.</p>
         </div>
