--- a/gsk.html
+++ b/gsk.html
@@ -101,19 +101,19 @@
             <img src="img/gsk_8.png"/>
         </div>
         <div class="more-projects">
-            <a href="british.html" class="other-project prev">
-                <div class="text-direction">
-                    <svg class="pre-svg" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none"><mask id="a" width="24" height="24" x="0" y="0" maskUnits="userSpaceOnUse" style="mask-type:alpha"><path fill="#D9D9D9" d="M0 0h24v24H0z"/></mask><g mask="url(#a)"><path fill="#333" d="m9 19-7-7 7-7 1.425 1.4-4.6 4.6H22v2H5.825l4.575 4.6L9 19Z"/></g></svg>
-                    <h5 class="pre-text">Previos</h5>
-                </div>
-                <h4 class="pre-project-name">영국문화원 예약 사이트</h4>
-            </a>
             <a href="3m.html" class="other-project next">
                 <div class="text-direction">
+                    <svg class="next-svg" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none"><mask id="a" width="24" height="24" x="0" y="0" maskUnits="userSpaceOnUse" style="mask-type:alpha"><path fill="#D9D9D9" d="M0 0h24v24H0z"/></mask><g mask="url(#a)"><path fill="#333" d="m9 19-7-7 7-7 1.425 1.4-4.6 4.6H22v2H5.825l4.575 4.6L9 19Z"/></g></svg>
                     <h5 class="next-text">Next up</h5>
-                    <svg class="next-svg" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none"><mask id="a" width="24" height="24" x="0" y="0" maskUnits="userSpaceOnUse" style="mask-type:alpha"><path fill="#D9D9D9" d="M0 0h24v24H0z"/></mask><g mask="url(#a)"><path fill="#333" d="m15 19-1.4-1.4 4.6-4.6H2v-2h16.2l-4.6-4.6L15 5l7 7-7 7Z"/></g></svg>
                 </div>
                 <h4 class="next-project-name">3M 컨슈머케어 사이트</h4>
+            </a>
+            <a href="british.html" class="other-project prev">
+                <div class="text-direction">
+                    <h5 class="pre-text">Previos</h5>
+                    <svg class="pre-svg" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none"><mask id="a" width="24" height="24" x="0" y="0" maskUnits="userSpaceOnUse" style="mask-type:alpha"><path fill="#D9D9D9" d="M0 0h24v24H0z"/></mask><g mask="url(#a)"><path fill="#333" d="m15 19-1.4-1.4 4.6-4.6H2v-2h16.2l-4.6-4.6L15 5l7 7-7 7Z"/></g></svg>
+                </div>
+                <h4 class="pre-project-name">영국문화원 예약 사이트</h4>
             </a>
         </div>
     </div>
