--- a/main.html
+++ b/main.html
@@ -129,12 +129,12 @@
                             <div class="thum-img">
                                 <img src="img/thum_2.png"/>
                                 <div class="thum-text into-img">
-                                    <h4>글로벌 기업의 반응형 웹사이트</h4>
+                                    <h4>반응형 웹사이트</h4>
                                     <span>Asiance</span>
                                 </div>
                             </div>
                             <div class="thum-text">
-                                <h4>글로벌 기업의 반응형 웹사이트</h4>
+                                <h4>반응형 웹사이트</h4>
                                 <span>Asiance</span>
                             </div>
                         </a>
